--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,21 +27,18 @@ body {
 }
 
 .bg-image {
-  background-image: url("/bg-hero.jpg");
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
+  background-color: #e5e7e2;
+  color: #13201b;
 }
 
 .bg-image::after {
   content: "";
   position: absolute;
   top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: black;
-  opacity: 60%;
+  right: 0;
+  background-color: #004e98;
+  height: 90%;
+  width: 33.33%;
 }
 
 @layer utilities {
